<resources>
    <string name="app_name">Example application mobile connect</string>


    <!--Main activity-->
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="sdk_choose_title">Provider metadata:</string>
    <string name="sdk_r_1">Without</string>
    <string name="sdk_r_2">With</string>
    <string name="encrypted_Msisdn">With Encrypted MSIDN?</string>
    <string name="request_parameters">Request parameters</string>
    <string name="client_id_field">Client id</string>
    <string name="client_secret_field">Client secret</string>
    <string name="client_subscriberId_field">Client subscriberId</string>
    <string name="client_name_field">Client name</string>
    <string name="Button_start">Send</string>
    <string name="encrypted_msisdn_title">Enter your msisdn key:</string>
    <string name="encrypted_msisdn_hint">Msisdn key:</string>

    <!--Results activity-->
    <string name="response_token_id">Token id:</string>
    <string name="response_message">Message:</string>
    <string name="response_access_token">Access token:</string>
    <string name="successful_request_message">Successful Authorization</string>

    <!--Endpoints configure activity-->
    <string name="title_activity_endpoints_configure">Endpoints Configurations</string>
    <string name="provider_metadata_field">Provider metadata url</string>
    <string name="authorization_url_field">Authorization url</string>
    <string name="requestToken_url_field">RequestToken url</string>
    <string name="userInfo_url_field">UserInfo url</string>
    <string name="revokeToken_url_field">RevokeToken url</string>
    <string name="save_button">Save</string>
</resources>
