<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gsma.mobileconnect.r2.android.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:title="Response results"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_token_id"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/response_token_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_message"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/response_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_access_token"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/response_access_token"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
